# Wordle-Haskell

./: CHANGELOG.md  LICENSE  README.MD  Wordle.cabal
app/: Main.hs
app/Wordle/: Logic.hs  State.hs  Validation.hs  Word.hs
