cabal-version:      2.4
name:               Wordle
version:            0.1.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pavlos Efstathiou
maintainer:         paulefstathiou2009@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Wordle
    main-is:          Main.hs

    other-modules: Wordle.Logic

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.16.0.0,
                      QuickCheck ^>= 2.14.2,
                      ansi-terminal ^>= 0.11.1
    hs-source-dirs:   app
    default-language: Haskell2010
