cabal-version:      2.4
name:               Wordle
version:            0.1.0

license-file:       LICENSE.MD
license:            GPLv3
author:             Pavlos Efstathiou
maintainer:         paulefstathiou2009@gmail.com

extra-source-files: CHANGELOG.md

executable Wordle
    main-is:        Main.hs

    other-modules:  Wordle.Validation,
                    Wordle.Word,
                    Wordle.State

    build-depends:  base ^>= 4.16.0.0,
                    random ^>= 1.2.1,
                    pretty-terminal ^>= 0.1.0.0,
                    mtl ^>= 2.2.2
    hs-source-dirs: app
    default-language: Haskell2010
